# langsmith-rag

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ui  EU_AI_ACT_COMPLIANCE_SUMMARY.md  GRAFANA_FINAL_SETUP.md  GRAFANA_SETUP_GUIDE.md  GROQ_LANGSMITH_SETUP.md  GROQ_SETUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_IMPLEMENTATION.md  LANGCHAIN_IMPLEMENTATION_GUIDE.md  LANGSMITH_TRACING_SUCCESS.md  LICENSE  Makefile  OBSERVABILITY.md  OBSERVABILITY_EVALUATION_GUIDE.md  OPERATIONS.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SECURITY_OBSERVABILITY_SUMMARY.md  STREAMLIT_UI_SUMMARY.md  debug_tracing.py  docker-compose-fixed.yml  docker-compose-local.yml  docker-compose-simple.yml  docker-compose.monitoring.yml  docker-compose.yml  env.example  generate_test_metrics.py  mock_api.py  pyproject.toml  rag_mock_api.py  requirements.txt  security_check.py  setup_git.sh  (+21 more)
.github/workflows/: ci-cd.yml  ci.yml  minimal-ci.yml  simple-ci.yml  working-ci.yml
data/knowledge/: iso_42001.md  langsmith_features.md
data/knowledge/ai_act/: conformity_assessment.md  enforcement_penalties.md  high_risk_systems.md  overview.md  prohibited_practices.md  transparency_obligations.md
evals/: run_eval.py
evals/datasets/: ai_act_eval.csv  rag_ai_act_v1.jsonl  rag_iso_eval_v1.jsonl
monitoring/: access_urls.sh  alerts.yml  loki.yml  prometheus-local.yml  prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: eu-ai-act-dashboard.json  rag-dashboard-fixed.json  rag-system-dashboard.json
src/: __init__.py  main.py
src/api/: __init__.py  langchain_routes.py  routes.py  schemas.py  streaming_routes.py
src/app/retrieval/: __init__.py  index_ai_act.py
src/app/services/: __init__.py  advanced_langchain.py  conversation_memory.py  llm.py  rag_pipeline.py
src/core/: auth.py  config.py  logging.py  middleware.py  observability.py  rate_limiter.py  security.py
src/evals/: __init__.py  compliance_evaluators.py  eval_offline.py  evaluators.py
src/services/: __init__.py  groq_langchain_rag.py  langchain_rag.py  mock_langchain_rag.py  rag.py  vectorstore.py
tests/: __init__.py  test_ai_act_compliance.py  test_api.py  test_basic.py  test_services.py  test_simple.py  test_streamlit_ui.py
tests/performance/: k6-load-test.js
